fix floating element on small profile

--- a/src/app/components/stream/user-profile/user-profile.component.scss
+++ b/src/app/components/stream/user-profile/user-profile.component.scss
@@ -256,7 +256,7 @@ $floating-header-height: 60px;
     }
 
     &-description {
-        padding: 10px 10px 15px 10px;
+        padding: 9px 10px 15px 10px;
         font-size: 13px;
         // border-bottom: 1px solid black;
 
